# tencent-cos-rs

./: .gitignore  Cargo.toml  README.md
cos-rs/: Cargo.toml  README.md
cos-rs/src/: ci.rs  client.rs  lib.rs  object.rs  response.rs  vector.rs
cos_object_store/: Cargo.toml  README.md
cos_object_store/src/: lib.rs
cos_object_store/tests/: cos.rs
cos_rs/: Cargo.toml  README.md
cos_rs/examples/: async_basic.rs
cos_rs/src/: auth.rs  batch.rs  bucket.rs  ci.rs  client.rs  crypto.rs  encoding.rs  error.rs  metainsight.rs  object.rs  response.rs  service.rs  vector.rs
cos_rs/tests/: cos.rs  go_test_parity.rs  offline.rs
