[package]
name = "cos-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
crc = "3"
ctr = "0.10"
hex = "0.4"
hmac = "0.13"
md-5 = "0.11"
percent-encoding = "2"
quick-xml = { version = "0.41", features = ["serialize"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "time",
] }
url = { version = "2", features = ["serde"] }

[features]
default = []
live-tests = []
