[package]
name = "cos_object_store"
version = "0.1.1"
description = "object_store adapter for Tencent Cloud Object Storage (COS)"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cos_rs = { path = "../cos_rs", version = "0.1" }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
object_store = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
dotenv = "0.15"
tokio = { workspace = true, features = ["test-util"] }
object_store = { workspace = true, features = ["integration", "cloud-base"] }
