[package]
name = "cos_rs"
version = "0.1.1"
description = "Async Tencent Cloud Object Storage (COS) XML API V5 SDK"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
crc = { workspace = true }
ctr = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
dotenv = "0.15"

[features]
default = []
live-tests = []
